--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ResQ</title>
+    <!-- Hide Google Translate top banner and prevent layout shift -->
+    <style>
+      .goog-te-banner-frame.skiptranslate { display: none !important; }
+      body { top: 0 !important; }
+      /* Optional cleanup of gadget branding inside our popover */
+      .goog-logo-link { display: none !important; }
+      .goog-te-gadget { font-size: 0 !important; }
+      .goog-te-gadget-icon { display: none !important; }
+      /* Hide tooltip/balloon and menu frames */
+      .goog-te-balloon-frame { display: none !important; }
+      .goog-te-menu-frame.skiptranslate { display: none !important; }
+      /* Hide modern V2 tooltip surfaces */
+      .VIpgJd-ZVi9od-ORHb-OEVmcd,
+      .VIpgJd-ZVi9od-aZ2wEe,
+      .VIpgJd-ZVi9od-aZ2wEe-wOHMyf-ti6hGc,
+      .VIpgJd-ZVi9od-ORHb { display: none !important; }
+      /* Avoid any offset Google tries to add */
+      .goog-te-banner { display: none !important; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
